--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: lab.tools
-Title: EJ Lab Common Functions
+Package: driscoll
+Title: Anne's custom function
 Version: 0.0.0.9000
 Authors@R: 
     person("Anne", "Driscoll", , "driscollannem@gmail.com", role = c("aut", "cre"),
